fixed graph color,  style to email form, filters

--- a/My Landing Page/src/styles.css
+++ b/My Landing Page/src/styles.css
@@ -127,7 +127,7 @@ h3, h4{  /*full stack dev*/
     text-transform: uppercase;
     letter-spacing: 1.5px;
     color: #1b1a1a;
-    text-shadow: #b59cde 1px 1px 5px;
+    text-shadow: rgb(25, 132, 165) 1px 1px 10px;
 
     animation: header-text 2.5s 1;
     animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -567,26 +567,42 @@ h3.dark-mode {
     width: 75%;
     max-width: 400px;
 }
+
 .form-input,
 .form-message,
 .form-btn{
     padding: 4px;
     margin-top: 3px;
-    border: 3px dotted rgb(134, 190, 190);
+    border: 3px dotted rgb(25, 132, 165);
     border-radius: 8px;
     background-color: rgb(218, 218, 218);
 }
 .form-message{
     height:100px;
-    border: 4px solid rgb(134, 190, 190);
+    border-width: 4px;
+    border-image: linear-gradient(-45deg, rgb(100, 17, 100), rgb(129, 73, 82), rgb(40, 70, 116), rgb(25, 132, 165)) 1;
 }
 .form-btn{
-    background-color: lightblue;
+    background: linear-gradient(-45deg, rgb(100, 17, 100), rgb(129, 73, 82), rgb(40, 70, 116), rgb(25, 132, 165));
+    animation: backgroundTransition 8s ease-in-out infinite;
+    background-size: 400% 400%;
+    color: darkgray;
     border: 0;
 }
 
-
-
+/* dark-mode message box*/
+.form-input.dark-mode,
+.form-message.dark-mode,
+.form-btn.dark-mode{
+    border: 3px dotted rgb(134, 190, 190);
+}
+.form-message.dark-mode{
+    border: 4px solid rgb(134, 190, 190);
+}
+.form-btn.dark-mode{
+    animation: none;
+    border: 0;
+}
 
 
 /* -----------------------------------------------------------FOOTER: */
@@ -596,7 +612,6 @@ h3.dark-mode {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #2c2a2a;
     background: linear-gradient(-45deg, rgb(100, 17, 100), rgb(129, 73, 82), rgb(40, 70, 116), rgb(25, 132, 165));
     background-size: 400% 400%;
     animation: backgroundTransition 8s ease-in-out infinite;
@@ -605,13 +620,16 @@ h3.dark-mode {
     background: #1b1a1a;
 }
 
-.footer a {
+.footer a,
+.footer p{
     text-decoration: none;
-    color: #1b1a1a;
+    color: #1b1919;
 }
-.footer.dark-mode a {
+.footer.dark-mode a,
+.footer.dark-mode p{
     color: rgb(139, 135, 135);
 }
+
 
 
 /*---------------------------------------------------------------------------------------*/
@@ -696,6 +714,9 @@ h3.dark-mode {
     .container .card-container:nth-child(3),
     .container .card-container:nth-child(5) {
         flex-direction: column-reverse;
+    }
+    .card-all{ /* disable mouse-over filter for mobile*/
+        filter: none;
     }
     .card {
         height: 250px;
