--- a/My Landing Page/api/css/api.css
+++ b/My Landing Page/api/css/api.css
@@ -15,7 +15,10 @@ body {
     left: 15%;
     margin: -2px 0 0 3px;
 }
-
+/* legend text color */
+text{
+    fill:gray;
+}
 .pieTip {
     position: absolute;
     float: left;
